<resources>
    <string name="app_name">FFW Biblis</string>
    <string name="signin">Anmelden</string>
    <string name="emailaddress">Email Adresse</string>
    <string name="enterpassword">Passwort eingeben</string>
    <string name="forgot_password">Passwort vergessen?</string>
    <string name="btn_login">Anmelden</string>
    <string name="loading_wait">Lädt... Bitte warten...</string>
    <string name="log_out">Abmelden</string>
    <string name="account">Konto</string>
    <string name="settings">Einstellungen</string>
    <string name="submit">Abschicken</string>
    <string name="add">Hinzufügen</string>

</resources>