<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.ffapp.Light"
    tools:context=".activity.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_wait"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/blue_marine"/>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:orientation="vertical">

        <!-- Layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/login_register_shape"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:paddingTop="70dp"
                    android:gravity="center"
                    android:text="@string/signin"
                    android:textColor="@color/gold_metallic"
                    android:textSize="40sp" />


            </LinearLayout>

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:drawableTint="@color/black_raisin"
                android:ems="10"
                android:hint="@string/emailaddress"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColorHint="@color/black_raisin"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_password_lock"
                android:drawablePadding="12dp"
                android:drawableTint="@color/black_raisin"
                android:ems="10"
                android:hint="@string/enterpassword"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColorHint="@color/black_raisin"
                android:autofillHints="password" />

            <TextView
                android:id="@+id/tvReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="155sp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/blue_marine"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="60sp"
                android:padding="5sp"
                android:background="@drawable/buttons"
                android:text="@string/btn_login"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>